examples/type_system/failing/12_generic_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E300: type variable T cannot be unified as both Int and String.
// A generic function declared with a single type parameter T requires all
// arguments annotated as T to receive values of the same concrete type.

fn both<T>(a: T, b: T) -> T { a }

both(42, "hello")
